--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body 
 {
-  background-color: powderblue; font-family: Verdana; text-align: center; padding: 30px; margin: 5px
+  background-color: powderblue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
 }
 h1 
 {
-  color: blue; font-family: Verdana; text-align: center; padding: 30px; margin: 5px
+  color: blue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
 }
 p 
 {
-  color: red; font-family: Verdana; text-align: center; padding: 30px; margin: 5px
+  color: red; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
 }
