--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body 
 {
-  background-color: powderblue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
+  background-color: powderblue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; border: 1px solid black;
+  border-radius: 10px
 }
 h1 
 {
