--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,5 @@ h1
 }
 p 
 {
-  color: red; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
+  color: red; font-family: Tahoma;  font: size 350px; text-align: center; padding: 30px; margin: 5px
 }
