--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body 
 {
-  background-color: powderblue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; border: 10px solid black
+  background-color: powderblue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; border: 2px solid black; border-radius: 10px
 }
 h1 
 {
