--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body 
 {
-  background-color: powderblue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
+  background-color: black; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
 
 }
