--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body 
 {
-  background-color: blue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px
+  background-color:transparent; font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center; padding: 30px; margin: 5px
 
 }
